tests/sksl/errors/ReturnTypeMismatch.glsl
### Compilation failed:

error: 1: expected 'int', but found 'float'
int foo() { return 1.0; }
                   ^^^
1 error
